# PurityEngine

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  cpp.hint  imgui.ini  install_dependencies.cmake.in  launch_editor.ps1  vcpkg.json
Commons/: CMakeLists.txt  CommonsConfig.cmake.in
Commons/include/: asset_enums.h  asset_record.h  common_macros.h  content_index.h  log.h  serialize_utilities.h  settings.ini  time_manager.h  uuid.h
Commons/src/: content_index.cpp  log.cpp  serialize_utilities.cpp  uuid.cpp
Game/: CMakeLists.txt  Game.pnt  Game.pproject
Game/assets/prefabs/: quad.passet  quad.pnta
Game/src/: application.cpp  application.h  quad_comp.cpp  quad_comp.h
PnT/: CMakeLists.txt  PnTConfig.cmake.in
PnT/artifacts/: data_hash_table.h  tags.h
PnT/artifacts/shaders/: basicShaderInv.vert
PnT/assetDB/include/: assetdb_query_specs.h  assetdb_service_conc.h  assetdb_type_strategy.h  assets_types.h
PnT/assetDB/src/: assetdb_service_conc.cpp  assetdb_type_strategy.cpp  assetdb_utility.cpp  assets_types.cpp
PnT/assets/include/: assetdb_enums.h  assetdb_query_specs.h  assetdb_service.h  assetdb_service_conc.h  assetdb_type_strategy.h  assetdb_utility.h  assets_types.h  uuid.h
PnT/assets/src/: assetdb_service_conc.cpp  assetdb_type_strategy.cpp  assetdb_utility.cpp  uuid.cpp
PnT/core/: application.cpp  application.h  iservices.h  pnt.h  service_base.h  service_locator.h  window_pnt.cpp  window_pnt.h
PnT/core/include/: application.h  assetdb_service.h  core_macros.h  ecs_service.h  ecs_service_conc.h  entry.h  events.h  input.h  iservices.h  layer.h  layerMask.h  layer_service.h  linkedList.h  log.h  papplication.h  pnt_core_pch.h  pnt_exceptions.h  pobject.h  service_base.h  service_locator.h  system_finder.h  uuid.h  window_pnt.h
PnT/core/src/: application.cpp  input.cpp  layer.cpp  layerMask.cpp  log.cpp  papplication.cpp  system_finder.cpp  window_pnt.cpp
PnT/docs/: asset_types.md  mesh_system.md
PnT/ecs/include/: IEntity.h  camera.h  component.h  component_traits.h  components_behavior.h  ecs_main.h  ecs_service.h  ecs_service_conc.h  entity.h  entity_base.h  entity_handle.h  entity_registry.h  id_comp.h  isystems.h  mesh.h  mesh_system.h  mesh_system_conc.h  reg_system.h  reg_system_conc.h  render_system.h  render_system_conc.h  renderer.h  scripting.h  tag_comp.h  transform_ecs.h  transform_system_conc.h
PnT/ecs/src/: camera.cpp  component.cpp  components_behavior.cpp  ecs_service_conc.cpp  entity.cpp  entity_registry.cpp  id_comp.cpp  mesh.cpp  mesh_system_conc.cpp  reg_system_conc.cpp  render_system_conc.cpp  renderer.cpp  scripting.cpp  tag_comp.cpp  transform_ecs.cpp  transform_system_conc.cpp
PnT/fileIO/include/: fileio.h  handle_base.h  mesh_importer.h
PnT/fileIO/src/: fileio.cpp  mesh_importer.cpp
PnT/geometry/include/: mesh_data_system.h  mesh_service.h  mesh_system.h  mesh_system_conc.h
PnT/geometry/src/: mesh_data_system.cpp  mesh_system_conc.cpp
PnT/graphics/include/: buffer.h  color.h  shader.h
PnT/graphics/src/: buffer.cpp  shader.cpp  vertex_array.cpp
PnT/include/: global.h  input_def.h  pnt.h
PnT/include/math/: transform.h
PnT/io/include/: fileio.h  handle_base.h  input.h  log.h  mesh_importer.h
PnT/io/src/: fileio.cpp  input.cpp  log.cpp
PnT/renderer/include/: buffer.h  color.h  opengl_renderer.h  render_service.h  render_system.h  render_system_conc.h  shader.h  vertex_array.h
PnT/renderer/src/: buffer.cpp  color.cpp  opengl_renderer.cpp  render_system_conc.cpp  shader.cpp  vertex_array.cpp
PnT/scene/include/: scene.h  transform_system.h  transform_system_conc.h
PnT/scene/src/: scene.cpp  transform_system_conc.cpp
PnT/src/: entity.cpp  input.cpp  log.cpp  renderer.cpp  transform.cpp
PnT/vendors/GLAD/: CMakeLists.txt
PnT/vendors/isle_math/: CMakeLists.txt
PnTEditor/: CMakeLists.txt
PnTEditor/gui/: editor.h
PnTEditor/gui/include/: editor.h  p_editor_application.cpp  p_editor_application.h
PnTEditor/gui/src/: p_editor_application.cpp
PnTEditor/project/include/: project_manager.h
PnTEditor/project/src/: project_manager.cpp
Purity/: CMakeLists.txt  PurityConfig.cmake.in
Purity/artifacts/: data_hash_table.h  tags.h
Purity/assetDB/include/: asset_registry.h  assetdb_enums.h  assetdb_query_specs.h  assetdb_service_conc.h  assetdb_type_strategy.h  assetdb_utility.h  assets_types.h  object_registry.h  ref_counted.h
Purity/assetDB/src/: asset_registry.cpp  assetdb_service_conc.cpp  assetdb_type_strategy.cpp  assetdb_utility.cpp  assets_types.cpp  object_registry.cpp
Purity/core/include/: assetdb_service.h  core_macros.h  ecs_service.h  ecs_service_conc.h  entry.h  events.h  input.h  iserializable.h  iservices.h  layer.h  layerMask.h  layer_service.h  layer_service_conc.h  log.h  object_registry.h  papplication.h  pobject.h  purity.h  purity_core_pch.h  purity_exceptions.h  serialization_macros.h  serializer.h  service_base.h  service_locator.h  system_finder.h  uuid.h  weak_ptr_utility.h  window_purity.h
Purity/core/src/: ecs_service_conc.cpp  input.cpp  layer.cpp  layerMask.cpp  layer_service_conc.cpp  log.cpp  object_registry.cpp  papplication.cpp  pobject.cpp  serializer.cpp  system_finder.cpp  uuid.cpp  window_purity.cpp
Purity/ecs/include/: camera.h  component.h  components_behavior.h  entity.h  entity_base.h  entity_handle.h  entity_registry.h  id_comp.h  isystems.h  mesh.h  mesh_system.h  mesh_system_conc.h  reg_system.h  reg_system_conc.h  render_system.h  render_system_conc.h  renderer.h  scripting.h  tag_comp.h  transform_ecs.h  transform_system.h  transform_system_conc.h  weak_ptr_utility.h
Purity/ecs/src/: camera.cpp  component.cpp  components_behavior.cpp  entity.cpp  entity_handle.cpp  entity_registry.cpp  id_comp.cpp  mesh.cpp  mesh_system_conc.cpp  (+7 more)
PurityEditor/: CMakeLists.txt
PurityGem/: CMakeLists.txt
PurityGem/docs/: verification.md
game/: CMakeLists.txt  application.cpp
game/src/: application.cpp  application.h  quad_comp.cpp  quad_comp.h
vendors/isle_math/: CMakeLists.txt  IsleMathConfig.cmake.in
(+117 files in other folders)
